new quotation/rotes page

--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,7 @@
                         Meus Dados
                     </div>
                 </a>
-                <a href="#" class="bottombar__link">
+                <a href="financeiro.html" class="bottombar__link">
                     <div class="bottombar__icon">
                         <i class="fas fa-money-bill fa-2x"></i>
                     </div>
@@ -178,7 +178,7 @@
                                         </a>
                                     </li>
 
-                                    <li class="dashboard__sidebar__list__item">
+                                    <li class="dashboard__sidebar__list__item ">
                                         <a href="meusDados.html" class="dashboard__sidebar__list__links">
                                             <div class="dashboard__sidebar__list__links__text">
                                                 <div class="dashboard__sidebar__list__icon">
@@ -192,7 +192,7 @@
                                     </li>
 
                                     <li class="dashboard__sidebar__list__item">
-                                        <a href="#" class="dashboard__sidebar__list__links">
+                                        <a href="financeiro.html" class="dashboard__sidebar__list__links">
                                             <div class="dashboard__sidebar__list__links__text">
                                                 <div class="dashboard__sidebar__list__icon">
                                                     <i class="fas fa-money-bill"></i>
@@ -243,7 +243,7 @@
                                         <div class="basefield__title">
                                             Saldo Disponível
                                         </div>
-                                        <div class="dashboard__text money">
+                                        <div class="basefield__text money">
                                             R$ 4.478
                                         </div>
                                     </div>
@@ -253,7 +253,7 @@
                                         <div class="basefield__title">
                                             Rotas Totáis
                                         </div>
-                                        <div class="dashboard__text rotes">
+                                        <div class="basefield__text rotes">
                                             1.481
                                         </div>
                                     </div>
@@ -264,7 +264,7 @@
                                         <div class="basefield__title">
                                             Cotações Hoje
                                         </div>
-                                        <div class="dashboard__text quotation">
+                                        <div class="basefield__text quotation">
                                             84
                                         </div>
 
@@ -282,7 +282,7 @@
                                         <div class="basefield__title">
                                             Cotações Total
                                         </div>
-                                        <div class="dashboard__text quotation">
+                                        <div class="basefield__text quotation">
                                             24.789
                                         </div>
 
@@ -304,7 +304,7 @@
                                         <ul class="dashboard__bestRotesList">
 
                                             <li>
-                                                <div class="dashboard__text bestRotes">
+                                                <div class="basefield__text bestRotes">
                                                     SP - RJ 
                                                     <span class="dashboard__rotes__badge">
                                                         9876
@@ -313,7 +313,7 @@
                                             </li>
 
                                             <li>
-                                                <div class="dashboard__text bestRotes">
+                                                <div class="basefield__text bestRotes">
                                                     SP - RJ 
                                                     <span class="dashboard__rotes__badge">
                                                         987
@@ -322,7 +322,7 @@
                                             </li>
 
                                             <li>
-                                                <div class="dashboard__text bestRotes">
+                                                <div class="basefield__text bestRotes">
                                                     SP - RJ 
                                                     <span class="dashboard__rotes__badge">
                                                         98
@@ -331,7 +331,7 @@
                                             </li>
 
                                             <li>
-                                                <div class="dashboard__text bestRotes">
+                                                <div class="basefield__text bestRotes">
                                                     SP - RJ 
                                                     <span class="dashboard__rotes__badge">
                                                         9
