--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
     <meta http-equiv="content-language" content="pr-br">
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
     <meta name="Revisit-After" content="1 day">
-    <title>O Melhor Guia de Transporte - Guia do Transporte</title>
+    <title>Dashboard - Guia do Transporte</title>
     <!-- CSS Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -69,7 +69,7 @@
                         Financeiro
                     </div>
                 </a>
-                <a href="#" class="bottombar__link">
+                <a href="rotas.html" class="bottombar__link">
                     <div class="bottombar__icon">
                         <i class="fas fa-road fa-2x"></i>
                     </div>
@@ -77,7 +77,7 @@
                         Rotas
                     </div>
                 </a>
-                <a href="#" class="bottombar__link">
+                <a href="cotacoes.html" class="bottombar__link">
                     <div class="bottombar__icon">
                         <i class="fas fa-clipboard fa-2x"></i>
                     </div>
@@ -116,7 +116,7 @@
         </div>
     </div>
 
-
+    <!-- Header -->
     <header class="header__height">
         <div class="container-fluid header__bar">
             <div class="container">
@@ -132,10 +132,10 @@
 
                     <!-- mini profile -->
                     <div class="col d-none d-md-block">
-                        <a href="#">
+                        <a href="meusDados.html">
                             <div class="dashboard__mini__profile">
                                 <span class="dashboard__mini__profile__name">
-                                    Pikachu Trans.
+                                    Onibus Cargas Trans.
                                 </span>
                                 <img src="img/noticia1.jpeg" alt="Minha foto de Perfil"
                                     class="dashboard__mini__profile__img">
@@ -163,6 +163,8 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="col-lg-2 col-md-3 d-none d-md-block position-fixed pe-0">
+
+                            <!-- Sidebar -->
                             <div class="dashboard__sidebar">
                                 <ul class="dashboard__sidebar__list">
                                     <li class="dashboard__sidebar__list__item active">
@@ -205,7 +207,7 @@
                                     </li>
 
                                     <li class="dashboard__sidebar__list__item">
-                                        <a href="#" class="dashboard__sidebar__list__links">
+                                        <a href="rotas.html" class="dashboard__sidebar__list__links">
                                             <div class="dashboard__sidebar__list__links__text">
                                                 <div class="dashboard__sidebar__list__icon">
                                                     <i class="fas fa-road"></i>
@@ -218,7 +220,7 @@
                                     </li>
 
                                     <li class="dashboard__sidebar__list__item">
-                                        <a href="#" class="dashboard__sidebar__list__links">
+                                        <a href="cotacoes.html" class="dashboard__sidebar__list__links">
                                             <div class="dashboard__sidebar__list__links__text">
                                                 <div class="dashboard__sidebar__list__icon">
                                                     <i class="fas fa-clipboard"></i>
@@ -235,7 +237,10 @@
 
                                 </ul>
                             </div>
+
                         </div>
+
+
                         <div class="col-lg-10 col-md-9 col-12 offset-lg-2 offset-md-3">
                             <div class="row">
                                 <div class="col-lg-8 col-md-6 col-12 mt-lg-3 mt-md-2 mt-2">
